[package]
name = "sheety-cli"
version = "0.1.0"
edition = "2021"
authors = ["potassium-shot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sheety ={ path = "../sheety" }
clap = { version = "4.2.5", features = ["derive"]}
anyhow = "1.0.71"

[[bin]]
name = "sheety"
path = "src/main.rs"
