[package]
name = "sheety"
description = "sheety is a sprite-sheet manipulation program written in Rust."
repository = "https://github.com/potassium-shot/sheety"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["potassium-shot"]
readme = "./README.md"
keywords = ["api", "graphics", "image", "gamedev", "utility"]
categories = ["game-development", "graphics", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.24.6"
thiserror = "1.0.40"
